@@ -10,7 +10,6 @@ import net.minecraft.client.renderer.Tessellator;
 import net.minecraft.client.renderer.texture.TextureMap;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.init.Items;
-import net.minecraft.item.ItemPickaxe;
 import net.minecraft.util.IIcon;
 import net.minecraft.world.World;
 import zabi.minecraft.perkmastery.visual.AnimationHelper;
@@ -33,7 +32,7 @@ public class OreDetectionHandler implements IRenderGeneral {
 
 	@Override
 	public void render(float ptick) {
-		if (player.isSneaking() && player.getHeldItem() != null && player.getHeldItem().getItem() instanceof ItemPickaxe) {
+		if (player.isSneaking() && player.getHeldItem() != null && IntegrationHandler.isPickaxe(player.getHeldItem())) {
 			for (int i = -RADIUS; i <= RADIUS; i++)
 				for (int j = -RADIUS; j <= RADIUS; j++)
 					for (int k = -RADIUS; k <= RADIUS; k++) {
