@@ -1,0 +1,8 @@
+package zabi.minecraft.perkmastery.libs;
+
+public class LibModIDs {
+
+	public static final String	THAUMCRAFT			= "Thaumcraft";
+	public static final String	BOTANIA				= "Botania";
+	public static final String	TINKERS_CONSTRUCT	= "TConstruct";
+}
