@@ -99,3 +99,10 @@ Build 9
 
 - Implemented Disenchanter
 - Added Update Checker
+- First Alpha! yay
+
+Build 10
+
+- Added Thaumcraft and TConstruct Pickaxe compatibility
+- Fixed weird issue with brewing stands and cauldrons showing as fire in recipes. Minecraft code is weird, I swear, blocks and items are different for these 2
+- Registered Locked Recipes in Recipe Sorter. Derp
